W2.Parser/alt/test/invalid/invalid6.c
//NOT ERROR FREE - This test case includes a declaration missing a semi colon
#include<stdio.h>

int main()
{
    int a = 9
    int b = 10;
}
